# claude-diary-hook

./: .gitignore  CLAUDE.md  Cargo.toml  QUICKSTART.md  README.md  build.sh  claude-config-example.json  install.sh  test.sh
src/: main.rs
