[package]
name = "claude-diary-hook"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5.0"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
regex = "1.0"
rusqlite = { version = "0.31", features = ["bundled", "chrono"] }

[[bin]]
name = "claude-diary-hook"
path = "src/main.rs"